# ais-time-series

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  main.py  pyproject.toml
charts/: helmfile.yaml
charts/ais-time-series/: Chart.yaml  values.yaml
charts/argocd/: application.yaml
